Added functionality and alignment

--- a/Task.html
+++ b/Task.html
@@ -13,7 +13,7 @@
     <h1 class="start">
         <img class="logo" src="./zavrsni-rad/assets/logo.png">
         <img class="moon" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0WFPi0Iyi9Aqe8gR4FKNXP-iFLKX36ZjCdj_wNM9HFFVj4GpC">
-        <button class="headerButton" type="button">
+        <button class="headerButton" type="button" onclick="location.href='#ready'">
             Join Us
         </button>
     </h1>
@@ -28,16 +28,16 @@
         </p>
         <p>
             Share with Friends
+            <button type="button" onclick="location.href='https://www.instagram.com/p/Bp4Bm_WBR5f/'">
+                <img src="./zavrsni-rad/assets/instagram.png">
+            </button>
+            <button type="button" onclick="location.href='https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient'">
+                <img src="./zavrsni-rad/assets/twitter.png">
+            </button>
+            <button type="button" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com'">
+                <img src="./zavrsni-rad/assets/facebook.png">
+            </button>
         </p>
-        <button type="button">
-            <img src="./zavrsni-rad/assets/instagram.png">
-        </button>
-        <button type="button">
-            <img src="./zavrsni-rad/assets/twitter.png">
-        </button>
-        <button type="button">
-            <img src="./zavrsni-rad/assets/facebook.png">
-        </button>
     </div>
     <div class="thePlan">
         <p>
@@ -47,7 +47,7 @@
             Our debut ARK project this December is to share happiness with as many people as we can. We believe
             Happiness is only real when shared. It will take more than our team to make this dream come true so we are
             calling on friends to
-            <a href=""> Join Us </a>
+            <a href="#ready"> Join Us </a>
         </p>
     </div>
     <div class="ideas">
@@ -71,7 +71,7 @@
         <p>
             *enter multiple ideas seperated with a comma
         </p>
-        <button type="button">
+        <button type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
             Send my idea!
         </button>
     </div>
@@ -83,10 +83,10 @@
             We will be donating 5% of Cregital’s monthly revenue to a charitable cause. ARK will be our own way to give
             back as part of your celebration. We will partner with charitable organizations that are making a
             difference.
-            <a href=""> Email us. </a>
+            <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515"> Email us. </a>
         </p>
     </div>
-    <div class="readyToJoin">
+    <div id="ready" class="readyToJoin">
         <p>
             Ready to join us this Christmas?
         </p>
@@ -98,20 +98,23 @@
             and you can call me on
             <input placeholder="080xxxxxxxx" />
         </p>
+        <button type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
+            Yes! Let's do this!
+        </button>
     </div>
     <div class="copyright">
         <p>
             © Copyright 2018
-            <a href="">
+            <a href="https://cregital.com/">
                 Cregital
             </a>
             . All rights reserved.
         </p>
         <p>
             @arkcregital on
-            <a href="">Instagram</a>
+            <a href="https://www.instagram.com/arkcregital/">Instagram</a>
             and
-            <a href="">Twitter</a>.
+            <a href="https://twitter.com/arkcregital">Twitter</a>.
         </p>
     </div>
 </body>
