--- a/Task.html
+++ b/Task.html
@@ -17,76 +17,86 @@
             Join Us
         </button>
     </h1>
-    <div class="generalIdea">
-        <p>
+    <div class="newArticle">
+        <p class="introTitle">
             We are building an ARK this Christmas!
         </p>
-        <p>
+        <p class="introText">
             No, we don't mean a flood is coming. We just plan to put smiles on the faces of everyday people around us
             with
             our ARK (acts of random kindness).
         </p>
-        <p>
+        <p class="share">
             Share with Friends
-            <button type="button" onclick="location.href='https://www.instagram.com/p/Bp4Bm_WBR5f/'">
+            <button class="instagramButton" type="button" onclick="location.href='https://www.instagram.com/p/Bp4Bm_WBR5f/'">
                 <img src="./zavrsni-rad/assets/instagram.png">
             </button>
-            <button type="button" onclick="location.href='https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient'">
+            <button class="twitterButton" type="button" onclick="location.href='https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient'">
                 <img src="./zavrsni-rad/assets/twitter.png">
             </button>
-            <button type="button" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com'">
+            <button class="facebookButton" type="button" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com'">
                 <img src="./zavrsni-rad/assets/facebook.png">
             </button>
         </p>
     </div>
-    <div class="thePlan">
-        <p>
-            So here’s the plan.
-        </p>
-        <p>
-            Our debut ARK project this December is to share happiness with as many people as we can. We believe
-            Happiness is only real when shared. It will take more than our team to make this dream come true so we are
-            calling on friends to
-            <a href="#ready"> Join Us </a>
-        </p>
+    <div class="firstArticle">
+        <div class="firstArticleText">
+            <p class="articleTitle">
+                So here’s the plan.
+            </p>
+            <p>
+                Our debut ARK project this December is to share happiness with as many people as we can. We believe
+                Happiness is only real when shared. It will take more than our team to make this dream come true so
+                we
+                are
+                calling on friends to
+                <a href="#ready"> Join Us </a>
+            </p>
+        </div>
+        <img src="./zavrsni-rad/assets/image-charity.png">
     </div>
-    <div class="ideas">
-        <p>
-            We need your ideas!
-        </p>
-        <p>
-            A little spend can go a long way to put a smile on the faces of everyday Nigerians. What act of random
-            kindness can you suggest?
-        </p>
-        <p class="SAME">
-            With
-        </p>
-        <img class="naira" src="https://image.flaticon.com/icons/svg/66/66222.svg">
-        <p class="SAME">
-            10,000 we can gift
-        </p>
-        <p>
-            <input placeholder="enter idea(s) here" />
-        </p>
-        <p>
-            *enter multiple ideas seperated with a comma
-        </p>
-        <button type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
-            Send my idea!
-        </button>
+    <div class="newArticle">
+        <div class="secondArticle">
+            <p class="articleTitle">
+                We need your ideas!
+            </p>
+            <p class="secondArticleText">
+                A little spend can go a long way to put a smile on the faces of everyday Nigerians. What act of random
+                kindness can you suggest?
+            </p>
+            <p class="giftInfo">
+                With
+            </p>
+            <img class="naira" src="https://image.flaticon.com/icons/svg/66/66222.svg">
+            <p class="giftInfo">
+                10,000 we can gift
+            </p>
+            <p class="inputBox">
+                <input class="ideaInput" type="text" placeholder="enter idea(s) here*" />
+            </p>
+            <p class="ideaInfo">
+                *enter multiple ideas seperated with a comma
+            </p>
+            <button class="buttonToSend" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
+                Send my idea!
+            </button>
+        </div>
     </div>
-    <div class="afterChristmas">
-        <p>
-            And after Christmas?
-        </p>
-        <p>
-            We will be donating 5% of Cregital’s monthly revenue to a charitable cause. ARK will be our own way to give
-            back as part of your celebration. We will partner with charitable organizations that are making a
-            difference.
-            <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515"> Email us. </a>
-        </p>
+    <div class="thirdArticle">
+        <img src="./zavrsni-rad/assets/image-handshake.png">
+        <div class="firstArticleText">
+            <p class="articleTitle">
+                And after Christmas?
+            </p>
+            <p>
+                We will be donating 5% of Cregital’s monthly revenue to a charitable cause. ARK will be our own way to give
+                back as part of your celebration. We will partner with charitable organizations that are making a
+                difference.
+                <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515"> Email us. </a>
+            </p>
+        </div>
     </div>
-    <div id="ready" class="readyToJoin">
+    <div id="ready" class="newArticle">
         <p>
             Ready to join us this Christmas?
         </p>
