Background going to the ends of the screen

--- a/Task.html
+++ b/Task.html
@@ -10,131 +10,142 @@
 </head>
 
 <body>
-    <div class="blueBackground">
-        <div class="navigationBar">
-            <img class="logo" src="./zavrsni-rad/taskbar/logo.png">
-            <div class="rightNav">
-                <img class="moon" src="./zavrsni-rad/taskbar/moon.png">
-                <button class="headerButton buttonToSendFromInput" type="button" onclick="location.href='#ready'">
-                    Join Us
+    <section class="blueBackground">
+        <div class="generalStyleAndPosition">
+            <div class="navigationBar">
+                <img class="logo" src="./zavrsni-rad/taskbar/logo.png">
+                <div class="rightNav">
+                    <img class="moon" src="./zavrsni-rad/taskbar/moon.png">
+                    <button class="headerButton buttonToSendFromInput" type="button" onclick="location.href='#ready'">
+                        Join Us
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="generalStyleAndPosition">
+        <div class="newArticle">
+            <p class="introTitle">
+                We are building an ARK this Christmas!
+            </p>
+            <p class="introText">
+                No, we don't mean a flood is coming. We just plan to put smiles on the faces of everyday people around
+                us
+                with
+                our ARK (acts of random kindness).
+            </p>
+            <p class="share">
+                Share with Friends
+                <button class="instagramButton" type="button" onclick="location.href='https://www.instagram.com/p/Bp4Bm_WBR5f/'">
+                    <img src="./zavrsni-rad/assets/instagram.png">
+                </button>
+                <button class="twitterButton" type="button" onclick="location.href='https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient'">
+                    <img src="./zavrsni-rad/assets/twitter.png">
+                </button>
+                <button class="facebookButton" type="button" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com'">
+                    <img src="./zavrsni-rad/assets/facebook.png">
+                </button>
+            </p>
+        </div>
+        <div class="nonCenteredArticle">
+            <div class="firstArticleText">
+                <p class="articleTitle">
+                    So here’s the plan.
+                </p>
+                <p>
+                    Our debut ARK project this December is to share happiness with as many people as we can. We believe
+                    Happiness is only real when shared. It will take more than our team to make this dream come true so
+                    we
+                    are
+                    calling on friends to
+                    <a href="#ready"> Join Us </a>
+                </p>
+            </div>
+            <img src="./zavrsni-rad/assets/image-charity.png">
+        </div>
+        <div class="newArticle">
+            <div class="secondArticle">
+                <p class="articleTitle">
+                    We need your ideas!
+                </p>
+                <p class="secondArticleText">
+                    A little spend can go a long way to put a smile on the faces of everyday Nigerians. What act of
+                    random
+                    kindness can you suggest?
+                </p>
+                <p class="giftInfo">
+                    With
+                </p>
+                <img class="naira" src="https://image.flaticon.com/icons/svg/66/66222.svg">
+                <p class="giftInfo">
+                    10,000 we can gift
+                </p>
+                <p class="inputBox">
+                    <input class="ideaInput" type="text" placeholder="enter idea(s) here*" />
+                </p>
+                <p class="ideaInfo">
+                    *enter multiple ideas seperated with a comma
+                </p>
+                <button class="buttonToSendFromInput" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
+                    Send my idea!
                 </button>
             </div>
         </div>
-    </div>
-    <div class="newArticle">
-        <p class="introTitle">
-            We are building an ARK this Christmas!
-        </p>
-        <p class="introText">
-            No, we don't mean a flood is coming. We just plan to put smiles on the faces of everyday people around us
-            with
-            our ARK (acts of random kindness).
-        </p>
-        <p class="share">
-            Share with Friends
-            <button class="instagramButton" type="button" onclick="location.href='https://www.instagram.com/p/Bp4Bm_WBR5f/'">
-                <img src="./zavrsni-rad/assets/instagram.png">
-            </button>
-            <button class="twitterButton" type="button" onclick="location.href='https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient'">
-                <img src="./zavrsni-rad/assets/twitter.png">
-            </button>
-            <button class="facebookButton" type="button" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com'">
-                <img src="./zavrsni-rad/assets/facebook.png">
-            </button>
-        </p>
-    </div>
-    <div class="nonCenteredArticle">
-        <div class="firstArticleText">
-            <p class="articleTitle">
-                So here’s the plan.
-            </p>
-            <p>
-                Our debut ARK project this December is to share happiness with as many people as we can. We believe
-                Happiness is only real when shared. It will take more than our team to make this dream come true so
-                we
-                are
-                calling on friends to
-                <a href="#ready"> Join Us </a>
-            </p>
-        </div>
-        <img src="./zavrsni-rad/assets/image-charity.png">
-    </div>
-    <div class="newArticle">
-        <div class="secondArticle">
-            <p class="articleTitle">
-                We need your ideas!
-            </p>
-            <p class="secondArticleText">
-                A little spend can go a long way to put a smile on the faces of everyday Nigerians. What act of random
-                kindness can you suggest?
-            </p>
-            <p class="giftInfo">
-                With
-            </p>
-            <img class="naira" src="https://image.flaticon.com/icons/svg/66/66222.svg">
-            <p class="giftInfo">
-                10,000 we can gift
-            </p>
-            <p class="inputBox">
-                <input class="ideaInput" type="text" placeholder="enter idea(s) here*" />
-            </p>
-            <p class="ideaInfo">
-                *enter multiple ideas seperated with a comma
-            </p>
-            <button class="buttonToSendFromInput" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
-                Send my idea!
-            </button>
-        </div>
-    </div>
-    <div class="nonCenteredArticle">
-        <img src="./zavrsni-rad/assets/image-handshake.png">
-        <div class="thirdArticleText">
-            <p class="articleTitle">
-                And after Christmas?
-            </p>
-            <p>
-                We will be donating 5% of Cregital’s monthly revenue to a charitable cause. ARK will be our own way to
-                give
-                back as part of your celebration. We will partner with charitable organizations that are making a
-                difference.
-                <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515"> Email us. </a>
-            </p>
-        </div>
-    </div>
-    <div id="ready" class="newArticle">
-        <div class="lastArticle">
-            <p class="lastArticleTitle articleTitle">
-                Ready to join us this Christmas?
-            </p>
-            <div class="lastArticleInput">
-                <p class="giftInfo">
-                    I'm
-                    <input class="nameInput ideaInput" placeholder="first name" />
-                    , my email is
-                    <input class="lastInput ideaInput" placeholder="email adress" />
-                    and you can call me on
-                    <input class="lastInput ideaInput" placeholder="080xxxxxxxx" />
+        <div class="nonCenteredArticle">
+            <img src="./zavrsni-rad/assets/image-handshake.png">
+            <div class="thirdArticleText">
+                <p class="articleTitle">
+                    And after Christmas?
+                </p>
+                <p>
+                    We will be donating 5% of Cregital’s monthly revenue to a charitable cause. ARK will be our own way
+                    to
+                    give
+                    back as part of your celebration. We will partner with charitable organizations that are making a
+                    difference.
+                    <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515"> Email us. </a>
                 </p>
             </div>
-            <button class="buttonToSendFromInput" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
-                Yes! Let's do this!
-            </button>
         </div>
     </div>
-    <div class="copyright">
-        <p>
-            © Copyright 2018
-            <a href="https://cregital.com/">
-                Cregital
-            </a>
-            . All rights reserved.
-        </p>
-        <p>
-            @arkcregital on
-            <a href="https://www.instagram.com/arkcregital/">Instagram</a>
-            and
-            <a href="https://twitter.com/arkcregital">Twitter</a>.
-        </p>
+    <section class="blueBackground">
+        <div id="ready" class="newArticle">
+            <div class="lastArticle">
+                <p class="lastArticleTitle articleTitle">
+                    Ready to join us this Christmas?
+                </p>
+                <div class="lastArticleInput">
+                    <p class="giftInfo">
+                        I'm
+                        <input class="nameInput ideaInput" placeholder="first name" />
+                        , my email is
+                        <input class="lastInput ideaInput" placeholder="email adress" />
+                        and you can call me on
+                        <input class="lastInput ideaInput" placeholder="080xxxxxxxx" />
+                    </p>
+                </div>
+                <button class="buttonToSendFromInput" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
+                    Yes! Let's do this!
+                </button>
+            </div>
+        </div>
+    </section>
+    <div class="generalStyleAndPosition">
+        <div class="copyright">
+            <p>
+                © Copyright 2018
+                <a href="https://cregital.com/">
+                    Cregital
+                </a>
+                . All rights reserved.
+            </p>
+            <p>
+                @arkcregital on
+                <a href="https://www.instagram.com/arkcregital/">Instagram</a>
+                and
+                <a href="https://twitter.com/arkcregital">Twitter</a>.
+            </p>
+        </div>
     </div>
 </body>
 
