--- a/Task.html
+++ b/Task.html
@@ -13,7 +13,7 @@
     <section class="blueBackground">
         <div class="generalStyleAndPosition">
             <div class="navigationBar">
-                <img class="logo" src="./zavrsni-rad/taskbar/logo.png">
+                <img id="me" class="logo" src="./zavrsni-rad/taskbar/logo.png" onclick="location.href='#me'">
                 <div class="rightNav">
                     <img class="moon" src="./zavrsni-rad/taskbar/moon.png">
                     <button class="headerButton buttonToSendFromInput" type="button" onclick="location.href='#ready'">
@@ -21,6 +21,7 @@
                     </button>
                 </div>
             </div>
+            <img class="headerImage" src="./zavrsni-rad/assets/header-background.png">
         </div>
     </section>
     <div class="generalStyleAndPosition">
@@ -36,13 +37,13 @@
             </p>
             <p class="share">
                 Share with Friends
-                <button class="instagramButton" type="button" onclick="location.href='https://www.instagram.com/p/Bp4Bm_WBR5f/'">
+                <button class="instagramButton" type="button" onclick="window.open('https://www.instagram.com/p/Bp4Bm_WBR5f/')">
                     <img src="./zavrsni-rad/assets/instagram.png">
                 </button>
-                <button class="twitterButton" type="button" onclick="location.href='https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient'">
+                <button class="twitterButton" type="button" onclick="window.open('https://twitter.com/intent/tweet?text=ARK%20-%20Sharing%20happiness%20with%20people%20by%20acts%20of%20random%20kindness.%20%40arkcregital%20https%3A%2F%2Fark.cregital.com&source=webclient')">
                     <img src="./zavrsni-rad/assets/twitter.png">
                 </button>
-                <button class="facebookButton" type="button" onclick="location.href='https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com'">
+                <button class="facebookButton" type="button" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fark.cregital.com')">
                     <img src="./zavrsni-rad/assets/facebook.png">
                 </button>
             </p>
@@ -86,7 +87,7 @@
                 <p class="ideaInfo">
                     *enter multiple ideas seperated with a comma
                 </p>
-                <button class="buttonToSendFromInput" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
+                <button class="buttonToSendFromInput" type="button" onclick="window.open('https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515')">
                     Send my idea!
                 </button>
             </div>
@@ -103,7 +104,7 @@
                     give
                     back as part of your celebration. We will partner with charitable organizations that are making a
                     difference.
-                    <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515"> Email us. </a>
+                    <a href="https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515" target="_blank"> Email us. </a>
                 </p>
             </div>
         </div>
@@ -124,7 +125,7 @@
                         <input class="lastInput ideaInput" placeholder="080xxxxxxxx" />
                     </p>
                 </div>
-                <button class="buttonToSendFromInput" type="button" onclick="location.href='https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515'">
+                <button class="buttonToSendFromInput" type="button" onclick="window.open('https://tenor.com/view/donald-trump-you-have-to-go-back-gif-5533515')">
                     Yes! Let's do this!
                 </button>
             </div>
@@ -134,16 +135,16 @@
         <div class="copyright">
             <p>
                 © Copyright 2018
-                <a href="https://cregital.com/">
+                <a href="https://cregital.com/" target="_blank">
                     Cregital
                 </a>
                 . All rights reserved.
             </p>
             <p>
                 @arkcregital on
-                <a href="https://www.instagram.com/arkcregital/">Instagram</a>
+                <a href="https://www.instagram.com/arkcregital/" target="_blank">Instagram</a>
                 and
-                <a href="https://twitter.com/arkcregital">Twitter</a>.
+                <a href="https://twitter.com/arkcregital" target="_blank">Twitter</a>.
             </p>
         </div>
     </div>
